--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Hello</title>
 <head/>
 <body>
+  <menu><li>Home</li><li>About</li></menu>
   <p><strong>Hello</strong></p>
   <p>There</p>
 <body/>
