--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Hello</title>
 <head/>
 <body>
-  <menu><li>Home</li><li>About</li></menu>
+  <menu></menu>
   <p><strong>Hello</strong></p>
   <p>There</p>
 <body/>
